  - fixed nodes searching with 'OR' operator (alec)
  - printing page generation time (alec)
  - EtherWerX support: added option phpui/ewx_support, node's ID should be less
    than 99999 (alec) 
  - lms-cutoff: added %b and %B variables in message (alec)
  - added helpdesk request's cause field (alec)
  - added option 'short_pagescroller' for lists with many pages (alec)
  
version 1.9.3 Zarin (2006-09-19):

  - cosmetics on search templates (djrzulf)
  - added reload status on hosts list in Reload (alec)
  - BTS#0000582: fixed query in Net Edit (alec)
  - lmsd/parser: fixed T-Script's problem with big numbers (alec)
  - lmsd/parser: support for multiple +, -, *, / operators in expression (alec)
  - added shortcut icon definition in page header (alec)
  - added Business Registration Number (polish REGON), Identity Card Number 
    (polish dow.os.) and Register of Business Entities Number (polish EDG/KRS)
    fields in customer data (alec)
  - accounts must have unique logins in domain context only (alec)
  - added Location field in computer data (alec)
  - added menu Documents (alec)
  - fixed problem with 'To' date on Cash Report (alec)
  - fixed Sale Registry sorting order (alec)
  - document templates plugins (using XAJAX library) (alec)
  - added numbering plan selection for Sale Registry printout (alec)
  - BTS#0000586: fixed summary on Customers List when using some filters (alec)
  - BTS#0000589: fixed customers searching by create/delete dates (alec)
  - nodes with tariffs assignments - UI only (alec)
  - increased performance: using LAST_INSERT_ID/CURRVAL functions instead of 
    e.g. SELECT MAX(id) after insert (alec)
  - BTS#0000467 lms-arping: setting lastonline time after scanning, not at 
    the end of script execution (alec)
  - added %cid variable in lms-notify and lms-notify-sms (alec)
  - BTS#0000591: fixed problems with octet-format mask in IP checking 
    procedures for 'allow_from' option and users authorization (alec)